2011-07-25
* fix copyright statements
* remove more duplicate code from bruteforce.py
* move dynamic library scanning to separate checks

2011-07-24
* finish ranking method from MSR 2011 paper, except reporting
* remove (some) duplicate code from bruteforce.py

2011-07-17
* don't barf if we can't generate a proper LIST for the batch extraction
program

2011-07-16
* start on reimplementing ranking methods from MSR 2011 paper

2011-07-10
* introduce generic method to create directories with the right names
* rewrite most search* methods to use the prescanned offsets

2011-07-09
* (partial) rewrite to use seek() and read() for searching offsets instead of
first reading the entire file and then find()
* start on generic marker search, so we only have to read a file once, instead
for every 'unpack' scan we want to run

2011-06-19
* ugly byte swapping hack for Realtek RTL8196C based routers

2011-06-03
* start working on crawlers to help maintain archive of source code files that
are needed to create knowledgebases

2011-05-31
* add support for lzo unpacking

2011-05-30
* rework SquashFS code
* add length checking for cramfs for blacklisting

2011-04-28
* partially integrate preliminary support for extracted assemblies for
installers for Microsoft Windows

2011-04-27
* start on extracting XML descriptions from Windows installers so we can make
better guesses as to which program to use to unpack the data

2011-04-03
* add extra ext2 sanity checks to vastly speed up scanning

2011-03-26
* add proper ext2 unpacking
* add unpacking with unsquashfs with LZMA from OpenWrt

2011-03-14
* introduce wrapper for squashfs, so we can easily add other squashfs
unpackers too, plus fix some cleanup bugs for unpackSquashfs

2011-03-13
* add PNG unpacking
* fix tempdirs for ext2 unpacking

2011-03-06
* rework leaf scans to properly use blacklisting
* reenable ext2fs scanning

2011-03-05
* fold walktempdir() into scan()