@@ -168,6 +168,11 @@ module  = bat.checks
 method  = searchDynamicLibs
 xmloutput = dynamicLibsPrettyPrint
 
+[architecture]
+type    = program
+module  = bat.checks
+method  = scanArchitecture
+
 [wireless-tools]
 type    = program
 module  = bat.checks
