@@ -1,7 +1,8 @@
 2011-07-25
 * fix copyright statements
 * remove more duplicate code from bruteforce.py
-* move dynamic library scanning to separate checks
+* move dynamic library scanning to a separate check
+* move architecture scanning to a separate check
 
 2011-07-24
 * finish ranking method from MSR 2011 paper, except reporting
